Added pickler to statechart_update.

--- a/DataOrganization/statechart.yml
+++ b/DataOrganization/statechart.yml
@@ -41,11 +41,12 @@ statechart:
                 action: |
                   eec_state = "openRoad"
               - target: normalTraffic
-                guard: (avg_dot_count > 150 and avg_dot_count <= 500 and (not is_ads)) or (avg_car_count > 2 and avg_car_count <= 10 and (not is_ads)) or (sg_count >= 2 and sg_count <= 5)
+                guard: (avg_dot_count > 150 and avg_dot_count <= 500) or (avg_car_count > 2 and avg_car_count <= 10) or (sg_count >= 2 and sg_count <= 5)
                 action: eec_state = "normalTraffic"
               - target: crowdedTraffic
                 guard: avg_dot_count > 500 or avg_car_count > 10 or sg_count > 5
                 action: eec_state = "crowdedTraffic"
+                priority: -2
           - name: normalTraffic
             on entry: |
               avg_dot_count = s.update_dot_count(frame_index)
@@ -70,6 +71,7 @@ statechart:
               - target: crowdedTraffic
                 guard: avg_dot_count > 500 or avg_car_count > 10 or sg_count > 5
                 action: eec_state = "crowdedTraffic"
+                priority: -2
           - name: abnormalDrivingState
             on entry: |
               avg_dot_count = s.update_dot_count(frame_index)
@@ -94,6 +96,7 @@ statechart:
               - target: crowdedTraffic
                 guard: avg_dot_count > 500 or avg_car_count > 10 or sg_count > 5
                 action: eec_state = "crowdedTraffic"
+                priority: -2
           - name: crowdedTraffic
             on entry: |
               avg_dot_count = s.update_dot_count(frame_index)
@@ -114,6 +117,7 @@ statechart:
             - target: normalTraffic
               guard: (avg_dot_count > 150 and avg_dot_count <= 500 and (not is_ads)) or (avg_car_count > 2 and avg_car_count <= 10 and (not is_ads)) or (sg_count >= 2 and sg_count <= 5)
               action: eec_state = "normalTraffic"
+              priority: -2
             - target: crowdedTraffic
               guard: True
               priority: -1
