--- a/DataOrganization/statechart.yml
+++ b/DataOrganization/statechart.yml
@@ -42,7 +42,7 @@ statechart:
                 action: |
                   eec_state = "openRoad"
               - target: normalTraffic
-                guard: (avg_dot_count > 150 and avg_dot_count <= 500) or (avg_car_count > 2 and avg_car_count <= 10) or (sg_count >= 2 and sg_count <= 5)
+                guard: (avg_dot_count > 150 and avg_dot_count <= 500) and (avg_car_count > 2 and avg_car_count <= 10) or (sg_count >= 2 and sg_count <= 5)
                 action: eec_state = "normalTraffic"
               - target: crowdedTraffic
                 guard: avg_dot_count > 500 or avg_car_count > 10 or sg_count > 5
@@ -59,7 +59,7 @@ statechart:
               vframes = s.video_update()
             transitions:
               - target: openRoad
-                guard: (avg_dot_count < 150 and (not is_ads)) or (avg_car_count <= 2)
+                guard: (avg_dot_count < 150 and (not is_ads)) and (avg_car_count <= 2)
                 action: eec_state = "openRoad"
               - target: abnormalDrivingState
                 guard: is_ads == True
@@ -146,7 +146,7 @@ statechart:
                   is_tailgate = s.update_tailgate(frame_index)
                 transitions:
                   - target: aggressive
-                    guard: aggressive_time < 300
+                    guard: aggressive_time < 30
                     action: |
                       driver_state = "aggressive"
                       aggressive_time += 1
@@ -157,7 +157,7 @@ statechart:
                       driver_state = "aggressive"
                       aggressive_time = 0
                   - target: cautious
-                    guard: aggressive_time >= 300
+                    guard: aggressive_time >= 30
                     action: |
                       driver_state = "cautious"
                       aggressive_time = 0
